--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-streamlit
-yfinance
-pandas
-numpy
-requests
-textblob
-torch
-transformers
-scikit-learn
-tensorflow
-tensorflow-io-gcs-filesystem
+streamlit==1.31.1
+yfinance==0.2.38
+pandas==2.1.4
+numpy==1.26.4
+requests==2.31.0
+textblob==0.17.1
+scikit-learn==1.3.2
+
+# PyTorch CPU build (Streamlit Cloud compatible)
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+torchaudio==2.1.0+cpu
+-f https://download.pytorch.org/whl/cpu/torch_stable.html
+
+# Transformers (safe version)
+transformers==4.34.0
+
+# TensorFlow CPU (Streamlit Cloud compatible)
+tensorflow-cpu==2.13.0
