--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ rich==13.5.3
 yfinance==0.2.28
 torch==2.2.0
 rich>=10.14.0,<14
+streamlit==1.29.0
+rich>=10.14.0,<14
+tensorflow-cpu==2.13.0
+torch==2.2.0
+yfinance
+numpy==1.24.3
