--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-tensorflow-cpu==2.13.0
-numpy==1.24.3
-streamlit==1.29.0
-pandas==2.1.0
-matplotlib==3.7.2
-scikit-learn==1.3.0
-rich==13.5.3
-yfinance==0.2.28
-torch==2.2.0
-rich>=10.14.0,<14
+# Streamlit
 streamlit==1.29.0
 rich>=10.14.0,<14
-tensorflow-cpu==2.13.0
-torch==2.2.0
+
+# Finance library
 yfinance
-numpy==1.24.3
+
+# TensorFlow CPU
+tensorflow-cpu==2.13.0
+numpy==1.24.3  # compatible with tensorflow-cpu 2.13.0
+
+# PyTorch
+torch==2.2.0
